--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ target/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/workspace.xml
+.idea/misc.xml
+.idea/shelf
+
 *.iws
 *.iml
 *.ipr
@@ -36,3 +40,8 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+# Ignore logs and temporary files
+*.log
+*.tmp
+*.swp
